<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Invite@Me</string>
    <string name="my_events">Mes événements</string>
    <string name="event_title" tools:ignore="DuplicateDefinition">Titre de lévénement</string>
    <string name="event_date">Date de lévénement</string>
    <string name="event_address">Adresse de l/événement</string>
    <string name="events_list">Liste des événements</string>
    <string name="search_events">Rechercher des événements</string>

    <string name="suppress_events">Supprimer</string>
    <string name="add_events">Ajouter</string>

    <!-- Menus -->
    <string name="menu_change_language">Changer de langue</string>
    <string name="menu_french">Français</string>
    <string name="menu_english">Anglais</string>
    <string name="menu_spanish">Espagnol</string>

    <!-- Messages -->
    <string name="current_language">Langue actuelle : %1$s</string>
    <string name="language_changed">Langue changée en %1$s</string>

    <string name="save">Sauvegarde</string>
    <!-- Edit Event Screen -->
    <string name="edit_event">Modifier lévénement</string>
    <string name="event_title_head">Titre de lévénement</string>
    <string name="event_description">Description</string>
    <string name="event_date_added">Date dajout</string>
    <string name="event_date_modified">Date de modification (AAAA-MM-JJ HH:MM:SS)</string>
    <string name="event_location_id">ID du lieu</string>
    <string name="delete_event_confirmation">Êtes-vous sûr de vouloir supprimer cet événement ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="location_details">Détails du lieu</string>
    <string name="location_address">Adresse</string>
    <string name="location_country">Pays</string>
    <string name="calendar_icon_desc">Icône du calendrier</string>
    <string name="add_event_fab_desc">Ajouter un nouvel événement</string>

    <!-- Strings for Delete Confirmation Dialog -->
    <string name="confirm_delete_title">Confirmer la suppression</string>
    <string name="confirm_delete_message">Êtes-vous sûr de vouloir supprimer événement "%1$s" ?</string>
    <string name="delete">Supprimer</string> <!-- Already exists, ensure it's appropriate -->
    <string name="cancel">Annuler</string>
    <string name="event_deleted_toast">Événement "%1$s" a été supprimé.</string>

    <string name="event_updated">Événement mis à jour</string>

    <string name="delete">Supprimer</string>

    <string name="venement">Évenement</string>
    <string name="title_activity_evenement">EvenementActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_title">CONNEXION UTILISATEUR</string>
    <string name="Email_login">Courriel</string>
    <string name="password_login">Mot de passe</string>
    <string name="remember_checkbox">Se souvenir de moi</string>
    <string name="forgot_password_button">Mot de passe oublié?</string>
    <string name="login_button">Connexion</string>
    <string name="signup_title">créer un compte</string>
    <string name="prenom_signup">Prénom</string>
    <string name="nom_signup">Nom</string>
    <string name="email_signup">Courriel</string>
    <string name="password_signup">Mot de passe</string>
    <string name="confirm_password_login">Confirmer le mot de passe</string>
    <string name="terms_checkbox">Termes et conditions</string>
    <string name="signup_button">Créer un compte</string>
    <string name="cr_ez_un_compte">CRÉEZ UN COMPTE</string>
    <string name="title_activity_ajouter_evenement">AjouterEvenementActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ajouter_un_v_nement">Ajouter un évènement</string>
    <string name="nom_titre_de_l_evenement">Nom/Titre de l\'evenement</string>
    <string name="type_de_l_evenement">Type de l\'evenement</string>
    <string name="lieu_de_l_v_nement_addresse_en_ligne">Lieu de l\'évènement (addresse - en ligne ?)</string>
    <string name="description_de_l_v_nement_ici">Description de l\'évènement ici</string>
    <string name="date_label">Date de l\'évenement ( sélectionez ici)</string>
    <string name="time_picker">Heure de l\'évènement ( sélectionnez ici )</string>
    <string name="ajouter_btn">Ajouter</string>
    <string name="btn_annuler">Annuler</string>
    <string name="creer_compte_button">créer un compte</string>

        <string name="venement">Événement</string>
        <string name="ajouter_un_v_nement">Ajouter un événement</string>
        <string name="nom_titre_de_l_evenement">Nom/Titre événement</string>
        <string name="type_de_l_evenement">Type événement</string>
        <string name="lieu_de_l_v_nement_addresse_en_ligne">Lieu événement (adresse - en ligne?)</string>
        <string name="description_de_l_v_nement_ici">Description événement</string>
        <string name="date_label">Date événement</string>
        <string name="time_picker">Heure événement</string>
        <string name="ajouter_btn">Ajouter</string>
        <string name="btn_annuler">Annuler</string>
        <string name="login_title">CONNEXION</string>
        <string name="Email_login">Adresse e-mail</string>
        <string name="password_login">Mot de passe</string>
        <string name="remember_checkbox">Se souvenir de moi</string>
        <string name="forgot_password_button">Mot de passe oublié ?</string>
        <string name="login_button">Se connecter</string>
        <string name="signup_title">Inscription</string>
        <string name="prenom_signup">Prénom</string>
        <string name="nom_signup">Nom</string>
        <string name="email_signup">Adresse e-mail</string>
        <string name="password_signup">Mot de passe</string>
        <string name="confirm_password_login">Confirmer le mot de passe</string>
        <string name="terms_checkbox">Conditions générales</string>
        <string name="signup_button">Créer un compte</string>
        <string name="cr_ez_un_compte">CRÉER UN COMPTE</string>
    <string name="menu_home">menu_maison</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slide</string>
    <string name="action_settings">setting</string>
    <string name="title_home" translatable="false">title_home</string>
    <string name="title_dashboard">dashboard</string>
    <string name="title_notifications">notification</string>
</resources>