<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_language"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/menu_change_language"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_language_fr"
                android:title="@string/menu_french" />
            <item
                android:id="@+id/action_language_en"
                android:title="@string/menu_english" />
            <item
                android:id="@+id/action_language_es"
                android:title="@string/menu_spanish" />
        </menu>
    </item>
</menu>
