<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AjouterEvenementActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="110dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/btnMenu"
            android:layout_width="60dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Menu"
            android:src="@android:drawable/ic_menu_sort_by_size" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/ajouter_un_v_nement"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

    </LinearLayout>

    <ScrollView
        android:layout_width="411dp"
        android:layout_height="733dp"
        android:layout_marginTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="143dp"
                android:layout_gravity="center_horizontal">

                <View
                    android:layout_width="145dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_calendar"
                    android:foregroundGravity="center_horizontal" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="1dp"
                android:background="@color/colorAccent"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/nom_titre_de_l_evenement"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/type_de_l_evenement" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_edittext_background"
                        android:hint="@string/lieu_de_l_v_nement_addresse_en_ligne" />

                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/editTextTextMultiLine"
                    android:layout_width="match_parent"
                    android:layout_height="156dp"
                    android:layout_marginVertical="20dp"
                    android:background="@drawable/rounded_edittext_background"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/description_de_l_v_nement_ici"
                    android:inputType="textMultiLine"
                    android:minHeight="40dp"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/date_label"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="Date de l'évenement" />

                    <DatePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner"
                        />
                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/time_picker"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="Heure de l'évènement" />
                    <TimePicker
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_annuler"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_annuler" />

                    <Button
                        android:id="@+id/btn_ajouter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ajouter_btn" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>